--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Osborn Multimedia. It&8217;s Coming&hellip;</title>
+        <title>Osborn Multimedia. It&#8217;s Coming&hellip;</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -15,7 +15,7 @@
         </style>
     </head>
     <body>
-        <p>It&apos;s coming&hellip;</p>
+        <p>It&#8217;s coming&hellip;</p>
 
         <script>
             var _gaq=[['_setAccount','UA-3012841-1'],['_trackPageview']];
