--- a/index.html
+++ b/index.html
@@ -1,27 +1,6 @@
-<!DOCTYPE html>
-<html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Osborn Multimedia. It&#8217;s Coming&hellip;</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+---
+layout: page
+title: "It&#8217;s coming&hellip;"
+---
 
-        <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,300,900' rel='stylesheet' type='text/css'>
-
-        <style>
-            html{font-family:"Merriweather",serif; color:white; background:#0AC5F4;}
-            p{text-shadow: 0px 2px 2px Black; margin-top:150px; font-size:75px; font-weight:900; text-align:center;}
-        </style>
-    </head>
-    <body>
-        <p>It&#8217;s coming&hellip;</p>
-
-        <script>
-            var _gaq=[['_setAccount','UA-3012841-1'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
-</html>
+<p>You guessed it, this site is a work in progress.</p>
