Eventbrite test structure added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "It&#8217;s coming&hellip;"
+title: "My Events"
 ---
 
 <p>You guessed it, this site is a work in progress.</p>
